Modulo Request en proceso

--- a/gestion-solicitudes/src/main/resources/templates/projects.html
+++ b/gestion-solicitudes/src/main/resources/templates/projects.html
@@ -164,7 +164,7 @@ function openModal() {
     document.querySelector('#btnActionForm').classList.replace("btn-info", "btn-primary");
     document.querySelector('#btnText').innerHTML = "Guardar";
     document.querySelector('#titleModal').innerHTML = "Nuevo Proyecto";
-    $('#modalFormProyects').modal('show');
+    $('#modalFormProjects').modal('show');
 }
 </script>
 <div th:replace="fragments/projects_form"></div>
