Template Requests inicio

--- a/gestion-solicitudes/src/main/resources/templates/fragments/sidebar.html
+++ b/gestion-solicitudes/src/main/resources/templates/fragments/sidebar.html
@@ -18,7 +18,7 @@
 		<li><a th:class="'app-menu__item '+${activoCompany}" th:href="@{/companies}"><i
 					class="app-menu__icon fa fa-building"></i><span class="app-menu__label">Empresas</span></a></li>
 		<li><a th:class="'app-menu__item '+${activoDevengaciones}" th:href="@{/devengaciones}"><i
-					class="app-menu__icon fa fa-line-chart"></i><span class="app-menu__label">Devengaciones</span></a>
+					class="app-menu__icon fa fa-line-chart"></i><span class="app-menu__label">Liquidaciones</span></a>
 		</li>
 
 		<li class="treeview"><a th:class="'app-menu__item '+${activoUsers}" href="" data-toggle="treeview"><i
